--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,22 @@
   --dc-max-border-radius: 25px
 }
 
+.logo-text {
+  font-family: Arial, sans-serif; /* Or your desired font */
+  font-size: 30px; /* Adjust font size as needed */
+  font-weight: bold;
+  display: flex; /* Use flexbox for alignment */
+  align-items: center; /* Vertically align items */
+  gap: 1px; /* Space between text and logo */
+}
+
+.logo {
+  height: 15px; /* Adjust the size of the logo */
+  width: auto; /* Maintain aspect ratio */
+  margin-bottom: -8px; /* Lower the logo slightly */
+}
+
+
 /* Modal styling */
 .form-modal {
   position: fixed;
